--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,23 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-      font-family: 'Poppins', sans-serif;
-    }
+  html {
+    font-family: 'Poppins', sans-serif;
+  }
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+div::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hides the spin buttons on number inputs */
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0; /* Optional: adjust spacing */
 }
 
